docs: close eight plan blockers after review (CHAT-etfnihnu)
The owner reviewed 2c28de19 and found eight blockers and four corrections.

1. Task 3 did not stage the root pom, which its own Step 1 modifies. The
   commit now stages it, and the file list names it.

2. Task 8 told the implementer to write redisLaunchArguments from another
   file. That is a placeholder. The class is now complete. The launch values
   come from RedisVectorRecallBootTests, and four deliberate differences are
   named. The class also carries its own BootApp, because chat-deploy-redis
   drives a test application rather than ChatApp.

3. The dead endpoint tests asserted only that something was thrown. A
   missing bean, a misspelled property, or a held port would each have
   passed. Each test now reads the whole cause chain, requires the closed
   port number in it, and refuses a NoSuchBeanDefinitionException.

4. The guard script and the gate script ran Python without miniforge. Each
   now activates it once, near the top, and each exits when the activation
   fails. The gate prints the interpreter it uses.

5. Task 10 Step 5 ended on an echo, so a failed gate read as a pass. The
   step now ends on a test. The loop also uses an if rather than a short
   circuit, which cannot set the status under set -e.

6. All ten commit commands used git commit -m, which cannot carry the
   required trailer. Each now uses a git commit -F - heredoc.

7. No task loaded a real local model. Task 3 Step 10 downloads
   all-MiniLM-L6-v2 and its tokenizer, and Step 11 builds the bean through
   the configuration. The test asserts 384 dimensions, a vector that is not
   all zero, the identity cache directory, and that two texts which share
   meaning score above two that do not.

8. The starter check read a classpath resource. ClassLoader.getResource
   returns the first match, and spring-boot-starter-test supplies its own
   copy of that file, so the check could not detect a starter. Both modules
   now read